--- a/board/style.css
+++ b/board/style.css
@@ -3,8 +3,9 @@
 }
 
 body{
-  background-color: #111;
+  background-color: #fff;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -17,18 +18,29 @@ body{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  max-width: 400px;
+  max-width: 600px;
 }
 
 .square{
   width: 16px;
   height: 16px;
-  background: #1d1d1d;
+  background: #fff;
   margin: 2px;
-  box-shadow:  0 0 2px #111;
+  box-shadow:  0 0 2px #1d1d1d;
   transition: 2000ms ease;
 }
 
 .square:hover{
   transition-duration: 0ms;
+}
+
+.list-color{
+  margin-top: 30px;
+}
+
+.item-color{
+  width: 16px;
+  height: 16px;
+  margin: 2px;
+  box-shadow:  0 0 2px #1d1d1d;
 }
